# traO-Judge-exec

./: .gitignore  Dockerfile  README.md  allpkgs.nix  build.sh  docker-image.nix  flake.nix  languageSettings.nix  languageSettings.sh  license-check-in-docker.sh  license-check.sh
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json  nix.conf
.github/workflows/: check.yaml  fmt.yaml
compilers/: default.nix
compilers/brainfuck/: default.nix
compilers/clang/: default.nix  test1.cpp  test1.stdout
compilers/cobol/: default.nix
compilers/g++/: ac-library.nix  default.nix  main.cpp
compilers/gcc/: default.nix
compilers/haskell/: default.nix
compilers/haxe/: default.nix
compilers/java/: default.nix
compilers/koka/: default.nix
compilers/mercury/: default.nix
compilers/raku/: default.nix
compilers/rust/: Cargo.toml  default.nix
docker/: build-in-docker.sh  build.sh  languageSettings-in-docker.sh  languageSettings.sh  license-check.sh
docker/builder/: Dockerfile
interpreters/: default.nix
interpreters/awk/: default.nix
interpreters/bash/: default.nix
interpreters/lua/: default.nix
interpreters/malbolge/: default.nix
interpreters/node/: default.nix
interpreters/powershell/: default.nix
interpreters/prolog/: default.nix
interpreters/python/: default.nix
interpreters/python/3.12-quantum/: default.nix  pyproject.toml
interpreters/python/3.12-traopy-util/: default.nix  pyproject.toml
interpreters/whitespace/: default.nix  pyproject.toml
misc/: default.nix
tools/: default.nix
utils/: default.nix
(+14 files in other folders)
