[project]
name = "traOJudge-quantum"
version = "0.1.0"
description = "traOJudge judge environment(python311-quantum)"
authors = [
    { name = "traOJudge", email = "placeholder@trao.jp" }
]
dependencies = [
    "qiskit==1.2.4",
    "numpy==2.1.3",
    "scipy==1.14.1",
    "networkx==3.4.2",
    "sympy==1.13.3",
    "sortedcontainers==2.4.0",
    "more-itertools==10.5.0",
    "shapely==2.0.6",
    "bitarray==3.0.0",
    "pulp==2.9.0",
    "mpmath==1.3.0",
    "pandas==2.2.3",
    "z3-solver==4.13.3.0",
    "scikit-learn==1.5.2",
]
requires-python = "==3.12"

[tool.hatch.metadata]
allow-direct-references = true
