[project]
name = "traOJudge-traopy-util"
version = "0.1.0"
description = "traOJudge writer support environment"
authors = [
    { name = "traOJudge", email = "placeholder@trao.jp" }
]
dependencies = [
    "traopy-util==0.1.2",
]
requires-python = "==3.12.*"

[tool.hatch.metadata]
allow-direct-references = true
